package ejBicicleta.domain;

public class Ciudad {
    // atributos
    private String nombre;
    private Comuna[] comunas;


}
