package ejBicicleta.domain;

public class Comuna {
    // Atributos
    private Integer Id;
    private Estacion[] estaciones;
}
